<resources>
    <string name="app_name">Fares</string>
    <string name="product_description">وصف المنتج</string>
    <string name="product_related_to">منتجات ذات صلة</string>
    <string name="add_to_cart">اضف الى العربة</string>
    <string name="buy_now">الشراء الان</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <array name="my_setting">
        <item>تعديل الملف الشخصى</item>
        <item>الطلبات الحالية</item>
        <item>الطلبات السابقة</item>
        <item>تسجل خروج</item>
    </array>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="profile">الحساب الشخصى</string>
    <string name="shops">المتاجر</string>
    <string name="edit">تعديل</string>
    <string name="save">حفظ</string>
    <string name="product_price">سعر القطعة : </string>
    <string name="quantity">الكمية : </string>
    <string name="quantity_pure">الكمية</string>
    <string name="total_price">اجمالى السعر : </string>
    <string name="delete">حذف</string>
    <string name="get_product">طلب المنتجات</string>
    <string name="ask">طلب</string>
    <string name="item_count">عدد القطع : </string>
    <string name="total">المجموع : </string>
    <string name="rate_suppliers">تقييم التجار</string>
    <string name="shop_cart">سلة المشتريات</string>
    <string name="products_cost">تكلفة المنتجات : </string>
    <string name="shipping_cost">تكلفة شركة الشحن</string>
    <string name="order_status">حالة الطلب</string>
    <string name="first_status">اول خطوة</string>
    <string name="second_status">ثانى خطوة</string>
    <string name="third_status">ثالث خطوة</string>
    <string name="delivered">تم التوصيل</string>
    <string name="show_more">مشاهدة المزيد</string>
    <string name="current_orders">الطلبات الحالية</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="shop_picture">صورة المتجر</string>
    <string name="shope_name">اسم المتجر</string>
    <string name="shope_description">وصف المتجر</string>
    <string name="phone">رقم الموبايل</string>
    <string name="create_shop">إنشاء المتجر</string>

    <string name="product_picture">صور المنتج</string>
    <string name="product_name">اسم المنتج</string>
    <string name="price_for_part_product">سعر المنتج قطاعى</string>
    <string name="price_for_full_product">سعر المنتج جمله</string>
    <string name="count_for_full_product">عدد الجمله يبدا من</string>
    <string name="count_product">عدد القطع المتوفرة</string>
    <string name="product_can_be_ready">سيتم تجهيز المنتج خلال</string>
    <string name="create_product">إنشاء المنتج</string>
    <string name="add_product">اضافة المنتج</string>
    <string name="section">القسم الخاص بالمنتج</string>
    <string name="my_shop">متجرى</string>
    <string name="time">الوقت :</string>
    <string name="add">اضف</string>
    <string name="login">تسجيل الدخول</string>
    <string name="facebook_login">الدخول عن طريق الفيسبوك</string>
    <string name="gmail_login">الدخول عن طريق جوجل</string>
    <string name="send_code">ارسال كود التفعيل</string>
    <string name="code">كود التفعيل</string>
    <string name="resend_code">اعادة ارسال كود التفعيل</string>
    <string name="invalid_phone">رقم الهاتف غير صحيح</string>
    <string name="invalid_name">الاسم مطلوب</string>
    <string name="invalid_description">الوصف مطلوب</string>
    <string name="try_again">حدث خطا ما برجاء المحاولة فى وقت اخر</string>
    <string name="please_complete_shop">من فضلك قم باكمال بيانات المتجر</string>
    <string name="shop_created">تم انشاء متجرك بنجاح</string>
    <string name="product_created">تم انشاء منتجك بنجاح</string>
    <string name="shop_updated">تم تعديل متجرك بنجاح</string>
    <string name="product_updated">تم تعديل منتجك بنجاح</string>
    <string name="view_my_products">عرض منتجاتى</string>
    <string name="view_my_sections">عرض اقسامى</string>
    <string name="my_product">منتجاتى</string>
    <string name="hour">ساعة</string>
    <string name="eg">جنية</string>
    <array name="product_can_be_ready_value">
        <item>24 ساعة</item>
        <item>48 ساعة</item>
    </array>
</resources>
