<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all_shops"
            android:icon="@drawable/ic_shopping_cart_24dp"
            android:title="@string/shops" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/shop_cart"
            android:icon="@drawable/ic_shopping_cart_24dp"
            android:title="@string/shop_cart" />
        <item
            android:id="@+id/current_orders"
            android:icon="@drawable/ic_widgets_24dp"
            android:title="@string/current_orders" />
        <!--<item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
