<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:textDirection="rtl"
    tools:context="ahmed.bassiouny.fares.view.fragments.CreateShopFragment">

    <FrameLayout
        android:id="@+id/myFrame"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:fontFamily="@font/jfflat"
            android:text="@string/shop_picture"
            android:textColor="@color/second_font" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/empty" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/jfflat"
        android:padding="5dp"
        android:text="@string/shope_description"
        android:textColor="@color/first_font"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/shop_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/jfflat"
        android:padding="5dp"
        android:text="The ship is pedantically solid.Harvest virtually like an evasive queen.View wihtout adventure, and we won’t destroy an alien.Where is the unrelated star?The mermaid is more creature now than ship. twisted and impressively strange.The gravimetric admiral technically feeds the transporter."
        android:textColor="@color/second_font"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/jfflat"
        android:padding="5dp"
        android:text="@string/phone"
        android:textColor="@color/first_font"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_green"
            android:fontFamily="@font/jfflat"
            android:gravity="center"
            android:text="@string/add_product"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius"
            android:fontFamily="@font/jfflat"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/empty_first_font_border_border"
            android:fontFamily="@font/jfflat"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/first_font"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
