<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ahmed.bassiouny.fares.view.activities.CreateShopActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rectangle">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/jfflat"
            android:hint="@string/phone"
            android:id="@+id/et_phone"
            android:minHeight="40dp"
            android:inputType="phone"
            android:digits="0123456789"
            android:textColor="@color/second_font" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_radius"
        android:fontFamily="@font/jfflat"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:id="@+id/btn_send_code"
        android:text="@string/send_code"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rectangle">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/jfflat"
            android:hint="@string/code"
            android:minHeight="40dp"
            android:enabled="false"
            android:id="@+id/et_code"
            android:inputType="number"
            android:digits="0123456789"
            android:textColor="@color/second_font" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_radius"
        android:fontFamily="@font/jfflat"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:id="@+id/et_create_shop"
        android:enabled="false"
        android:text="@string/create_shop"
        android:textColor="@color/white"
        android:textSize="18sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/tv_resend_code"
        android:layout_marginTop="15dp"
        android:text="@string/resend_code"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/progress"
        android:visibility="gone"/>
</LinearLayout>
