<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ahmed.bassiouny.fares.view.fragments.MyProductsCartFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/linear"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_get_product"
        android:background="@color/white"
        android:layoutDirection="rtl"
        android:id="@+id/linear"
        android:textDirection="rtl">

        <TextView
            android:id="@+id/tv_item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jfflat"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="start"
            android:text="@string/item_count"
            android:textColor="@color/first_font" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jfflat"
            android:padding="10dp"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:text="@string/total"
            android:textColor="@color/first_font" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_get_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/green"
        android:fontFamily="@font/jfflat"
        android:textStyle="bold"
        android:text="@string/get_product"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>
