<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    android:layout_marginTop="10dp"
    card_view:cardCornerRadius="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/p1" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/iv_product_image"
            android:ellipsize="end"
            android:fontFamily="@font/jfflat"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/first_font"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="بنطلون جينز" />

        <TextView
            android:id="@+id/tv_shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_product_name"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/iv_product_image"
            android:fontFamily="@font/jfflat"
            android:text="@string/shope_name"
            android:textColor="@color/second_font"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_shop_name"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/iv_product_image"
            android:fontFamily="@font/jfflat"
            android:text="@string/product_price"
            android:textColor="@color/second_font"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/linear_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_product_price"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/iv_product_image"
            android:background="@color/first_font"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/jfflat"
                android:text="@string/quantity"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:digits="0123456789"
                android:fontFamily="@font/jfflat"
                android:inputType="number"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:maxLength="2"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="2" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/my_view"
            android:layout_below="@id/linear_quantity"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_view"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/jfflat"
            android:text="@string/total_price"
            android:padding="3dp"
            android:textColor="@color/second_font"
            android:textSize="14sp" />
        <Button
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:text="@string/delete"
            android:id="@+id/btn_delete"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/jfflat"
            android:textColor="@color/first_font"
            android:layout_below="@+id/my_view"
            android:background="@drawable/empty_first_font_border"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>