<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context="ahmed.bassiouny.fares.view.activities.LoginActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/first_font"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:tint="@color/yellow" />

    <LinearLayout
        android:id="@+id/linear_google"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@color/gmail"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/google" />

        <Button
            android:id="@+id/btn_gmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:text="@string/gmail_login"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_above="@+id/linear_google"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/facebook"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/facebook" />

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:paddingEnd="30dp"
            android:paddingStart="40dp"
            android:text="@string/facebook_login"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progress"
        android:visibility="gone"/>
</RelativeLayout>
